update font sizes all devices

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
           <h1 class="display-4 hello fade-in">Hi, I'm Anthony</h1>
           <p class="lead fade-in-delay intro">I am a Tech Support Specialist, Repair Technician, Fire Performer and Aspiring Web Developer</p>
           <p class="lead fade-in-delay2 intro2">I solve technical problems and teach people skills to make their lives easier</p>
-          <a class="btn btn-primary btn-lg p-2 mt-5 fade-in-delay3 learn-more" href="#about" role="button">Learn more</a>
+          <!-- <a class="btn btn-primary btn-lg p-2 mt-5 fade-in-delay3 learn-more" href="#about" role="button">Learn more</a> -->
+          <div class="learn-more"> <a class="btn btn-primary btn-lg p-2 mt-5 fade-in-delay3" href="#about" role="button">Learn more</a></div>
         </div>
       </div>
     </div>
@@ -112,8 +113,8 @@
         <h2 class="display-4 slideinleft show-on-scroll" id="about-header">About Me</h2>
           <p class="content">I have always had a passion for technology. Throughout my life, I have been constantly tinkering with, building, and fixing electronics. I studied Computer Science at the University of Central Florida to pursue my passion for technology. For the last year I have been providing tech support for Verizon Wireless customers. I obtained my A+ Certification from CompTIA and I am continuously furthering my education. I have studied network tools and infrastructure, web development, and cybersecurity. I actually built this website from the ground up using HTML, CSS, and Javascript. Check out my portfolio to see other projects that I have been working on lately!
           </p>
-          <p class="content">While studying at the university, I encountered many new people and ideas and was introduced to a new passion: yoga and movement arts. Shortly thereafter I witnessed my first fire dancing performance, and I was immediately mesmerized. After years of practice, I started my first small business: Phoenix Fire & Performance Art, and I became a certified Yoga Instructor. At Phoenix Fire, I led a troupe of performers who specialized in fire dancing, acrobatics, juggling, LED light shows, fire eating, and fire breathing! As my business developed, I realized that myself and many others had a need for higher quality tools to be used for training and performing. This is what led me to start my second business: Liquid Flow Props. At Liquid Flow I designed, manufactured, sold, and repaired high quality fire performance tools. After 6 insightful years, I shut down Phoenix Fire and Liquid Flow in order to pursue my career in IT. Though that may have been the end of a chapter, a Phoenix never really dies does it? Below, you can check out my websites for both of these startups to learn more. 	
-          </p>
+          <!-- <p class="content">While studying at the university, I encountered many new people and ideas and was introduced to a new passion: yoga and movement arts. Shortly thereafter I witnessed my first fire dancing performance, and I was immediately mesmerized. After years of practice, I started my first small business: Phoenix Fire & Performance Art, and I became a certified Yoga Instructor. At Phoenix Fire, I led a troupe of performers who specialized in fire dancing, acrobatics, juggling, LED light shows, fire eating, and fire breathing! As my business developed, I realized that myself and many others had a need for higher quality tools to be used for training and performing. This is what led me to start my second business: Liquid Flow Props. At Liquid Flow I designed, manufactured, sold, and repaired high quality fire performance tools. After 6 insightful years, I shut down Phoenix Fire and Liquid Flow in order to pursue my career in IT. Though that may have been the end of a chapter, a Phoenix never really dies does it? Below, you can check out my websites for both of these startups to learn more. 	
+          </p> -->
           <div class="container pb-4">
             <div class="text-center">
                 <a href="files/Resume.pdf" download="Anthony-Resume" target="_blank">
@@ -144,15 +145,15 @@
     <div class="row">
       <div class="col-sm-6 text-center my-auto">
         <h2 class="row-services-heading">Tech Support</h2>
-        <p> I create solutions for various issues both at home and in the office. Blurb.</p>
+        <h5 class="subheading"> I provide solutions for tech issues at home and in the office </h5>
       </div>
       <div class="col-sm-6 row-services">
         <ul class="list-items">
-          <li>Assist users and manage user accounts</li>
-          <li>In-person and remote tech support</li>
-          <li>Diagnose and repair technical issues</li>
-          <li>Maintain printers, scanners, fax machines</li>
+          <li>Tech support for iPhone/iPad, Androids, and computers </li>
           <li>Website development and maintenance</li>
+          <li>In-person and remote tech support</li>
+          <li>Diagnose and repair software issues</li>
+          <li>Maintain network devices & office equipment</li>
         </ul>
       </div>
 
@@ -164,14 +165,14 @@
     </div>
     <div class="row">
       <div class="col-sm-6 text-center my-auto">
-        <h2 class="row-services-heading">Device Repair & Upgrades</h2>
-        <p> I create solutions for various issues both at home and in the office. Blurb.</p>
+        <h2 class="row-services-heading">Device Repair</h2>
+        <h5 class="subheading"> If you can break it, I can fix it</h5>
       </div>
       <div class="col-sm-6 row-services">
         <ul class="list-items">
-          <li>Repair PC and laptop components</li>
-          <li>Data Recovery</li>
-          <li>Upgrade existing computers</li>
+          <li>Repair PC and laptop screens, hard drives, RAM</li>
+          <li>Data Recovery and Data transfer</li>
+          <li>Upgrade computers with new Hard drive/SSD, RAM, Processors</li>
           <li>iPad, iPhone, and cell phone repairs</li>
         </ul>
       </div>
@@ -184,16 +185,16 @@
       </div>
       <div class="row">
         <div class="col-sm-6  text-center my-auto">
-          <h2 class="row-services-heading">Office Streamlining & Organization</h2>
-          <p> I create solutions for various issues both at home and in the office. Blurb.</p>
+          <h2 class="row-services-heading">Networking</h2>
+          <h5 class="subheading"> I create solutions for various issues both at home and in the office. Blurb.</h5>
         </div>
         <div class="col-sm-6 row-services">
           <ul class="list-items">
             <li>Cable Management</li>
-            <li>Home and office networking</li>
-            <li>Digital housekeeping</li>
-            <li>Automated Systems</li>
-            <li> Network Security</li> 
+            <li>Home/Office LAN and Wireless Networking</li>
+            <li>Virus/Malware Removal</li>
+            <li>Home/Office Automation</li>
+            <li>Network Security</li> 
           </ul>
         </div>
   
@@ -300,7 +301,7 @@
       <!-- item -->
       <div class="item">
         <div class="card card-shadow border-0 mb-4">
-          <div class="card-body">
+          <div class="card-body card-body1">
             <div class="position-relative thumb bg-success-gradiant d-inline-block text-color mb-4"><img src="img/face1.jpg" alt="wrapkit" class="thumb-img position-absolute rounded-circle">1</div>
             <h5 class="font-weight-light">"Great person all the way around. Anthony knew exactly what I was talking about and how to handle my situation. Very knowledgeable, pleasant, and had a great sense of humor. I was just very lucky to have had this great person to help me. He did an excellent job. Thanks for having such a nice man to do business with. Keep him, he is GREAT."</h5>
             <span class="devider d-inline-block"></span>
