--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- Fav icon -->
@@ -41,10 +41,9 @@
     <title>Tech X Guy • Tech Support • Web Development • Repairs  </title>
     <!--TODO
     - New About Me Photo
-    - blurbs about services / simplify
     - css animation circle/ slide/ wipe/ overlay like google buds
-    - more about me? Phoenix
     - landscape phone hello and full width
+    - projects section in cards
     - add in real resume file
     -->
   </head>
