--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
     <meta property="og:image:height" content="840" />
     <title>Tech X Guy • Tech Support • Web Development • Repairs  </title>
     <!--TODO
-    - New About Me Photo
+    - New About Me Photo / about sizing
     - css animation circle/ slide/ wipe/ overlay like google buds
-    - landscape phone hello and full width
     - projects section in cards
     - add in real resume file
     -->
@@ -107,10 +106,10 @@
         <img class="half-panel" src="img/demo_headshot.JPG" alt="headshot" loading="lazy" draggable="false">
       </div>
   
-    <div class="col-lg-6 container">
+    <div class="col-lg container">
       <div class="">
         <h2 class="display-4 slideinleft show-on-scroll" id="about-header">About Me</h2>
-          <p class="content">I have always had a passion for technology. Throughout my life, I have been constantly tinkering with, building, and fixing electronics. I studied Computer Science at the University of Central Florida to pursue my passion for technology. For the last year I have been providing tech support for Verizon Wireless customers. I obtained my A+ Certification from CompTIA and I am continuously furthering my education. I have studied network tools and infrastructure, web development, and cybersecurity. I actually built this website from the ground up using HTML, CSS, and Javascript. Check out my portfolio to see other projects that I have been working on lately!
+          <p class="content">I have always had a passion for technology. Throughout my life, I have been constantly tinkering with, building, and fixing electronics. I studied Computer Science at the University of Central Florida and have used those skills to solve problems and fix electronics for thousands of people. For the last year I have been providing tech support for 300 Verizon Wireless customers a month. Additionally, I resolved over 85% of their issues that I came into contact with. I obtained my A+ Certification from CompTIA in 2020 and I am continuously growing and furthering my education. As this is a rapidly evolving field, I strive to acquire the latest information pertaining to technology. I have studied network tools/infrastructure, web development, and cybersecurity. I actually built this website from the ground up using HTML, CSS, and Javascript. Check out my portfolio to see other projects that I have been working on lately!
           </p>
           <!-- <p class="content">While studying at the university, I encountered many new people and ideas and was introduced to a new passion: yoga and movement arts. Shortly thereafter I witnessed my first fire dancing performance, and I was immediately mesmerized. After years of practice, I started my first small business: Phoenix Fire & Performance Art, and I became a certified Yoga Instructor. At Phoenix Fire, I led a troupe of performers who specialized in fire dancing, acrobatics, juggling, LED light shows, fire eating, and fire breathing! As my business developed, I realized that myself and many others had a need for higher quality tools to be used for training and performing. This is what led me to start my second business: Liquid Flow Props. At Liquid Flow I designed, manufactured, sold, and repaired high quality fire performance tools. After 6 insightful years, I shut down Phoenix Fire and Liquid Flow in order to pursue my career in IT. Though that may have been the end of a chapter, a Phoenix never really dies does it? Below, you can check out my websites for both of these startups to learn more. 	
           </p> -->
@@ -165,7 +164,7 @@
     <div class="row">
       <div class="col-sm-6 text-center my-auto">
         <h2 class="row-services-heading">Device Repair</h2>
-        <h5 class="subheading"> If you can break it, I can fix it</h5>
+        <h5 class="subheading"> If you can break it, I can help repair it or replace it</h5>
       </div>
       <div class="col-sm-6 row-services">
         <ul class="list-items">
