fix smoothness carousel and scroll

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </nav>
       <div class="jumbotron hero_content">
         <div class="container">
-          <h1 class="display-4 hello fade-in">Hi, I'm Anthony</h1>
+          <h1 class="display-4 hello fade-in1">Hi, I'm Anthony</h1>
           <p class="lead fade-in-delay intro">I am a Tech Support Specialist, Repair Technician, Fire Performer and Aspiring Web Developer</p>
           <p class="lead fade-in-delay2 intro2">I solve technical problems and teach people skills to make their lives easier</p>
           <!-- <a class="btn btn-primary btn-lg p-2 mt-5 fade-in-delay3 learn-more" href="#about" role="button">Learn more</a> -->
@@ -164,7 +164,7 @@
     <div class="row">
       <div class="col-sm-6 text-center my-auto">
         <h2 class="row-services-heading">Device Repair</h2>
-        <h5 class="subheading"> If you can break it, I can help repair it or replace it</h5>
+        <h5 class="subheading"> If you can break it, I can fix it</h5>
       </div>
       <div class="col-sm-6 row-services">
         <ul class="list-items">
@@ -210,8 +210,8 @@
       <img src="img/windows.png" class="slider-image" draggable="false" alt="windows 10" loading="lazy">
     </div>
     <div class="carousel-item" data-interval="3600">
-      <img src="img/ios.png" class="slider-image" draggable="false" alt="ios" loading="lazy">
-      <img src="img/ipados.png" class="slider-image" draggable="false" alt="ipados" loading="lazy">
+      <img src="img/ios.png" class="slider-image1" draggable="false" alt="ios" loading="lazy">
+      <img src="img/ipados.png" class="slider-image1" draggable="false" alt="ipados" loading="lazy">
       <img src="img/android.png" class="slider-image" draggable="false" alt="android" loading="lazy">
       
     </div>
@@ -310,7 +310,7 @@
       <!-- item -->
       <div class="item">
         <div class="card card-shadow border-0 mb-4">
-          <div class="card-body">
+          <div class="card-body card-body2">
             <div class="position-relative thumb bg-success-gradiant d-inline-block text-color mb-4"><img src="img/face2.jpg" alt="wrapkit" class="thumb-img position-absolute rounded-circle">2</div>
             <h5 class="font-weight-light">"Anthony was very good, very knowledgeable . He helped me with the phone mess and got it fixed in no time whatsoever! This representative was the best I’ve ever dealt with. He made the awful Verizon help call better."</h5>
             <span class="devider d-inline-block my-2"></span>
@@ -321,7 +321,7 @@
       <!-- item -->
       <div class="item">
         <div class="card card-shadow border-0 mb-5">
-          <div class="card-body">
+          <div class="card-body card-body2">
             <div class="position-relative thumb bg-success-gradiant d-inline-block text-color mb-4"><img src="img/face3.jpg" alt="wrapkit" class="thumb-img position-absolute rounded-circle">3</div>
             <h5 class="font-weight-light">"Outstanding customer service! Great communication. Wonderful attitude. Thank you Anthony! Very satisfied. He explained why I was having the issue versus just correcting the issue."</h5>
             <span class="devider d-inline-block"></span>
@@ -340,7 +340,7 @@
       <!-- item -->
       <div class="item">
         <div class="card card-shadow border-0 mb-4">
-          <div class="card-body">
+          <div class="card-body card-body2">
             <div class="position-relative thumb bg-success-gradiant d-inline-block text-color mb-4"><img src="img/face6.jpg" alt="wrapkit" class="thumb-img position-absolute rounded-circle">4</div>
             <h5 class="font-weight-light">"I don’t know how much easier he could have made it. He helped me and I would never want any other type of phone. I can usually tell when a person is sincere and really wants to help. I am an older woman and he was very patient and did not rush me."</h5>
             <span class="devider d-inline-block my-3"></span>
@@ -351,7 +351,7 @@
       <!-- item -->
       <div class="item">
         <div class="card card-shadow border-0 mb-4">
-          <div class="card-body">
+          <div class="card-body card-body2">
             <div class="position-relative thumb bg-success-gradiant d-inline-block text-color mb-4"><img src="img/face4.jpg" alt="wrapkit" class="thumb-img position-absolute rounded-circle">5</div>
             <h5 class="font-weight-light">"When they couldn’t help me at the Verizon store, they gave me the number to get further assistance. Anthony was very informative as he walked me through every step of the way."</h5>
             <span class="devider d-inline-block my-3"></span>
@@ -362,7 +362,7 @@
       <!-- item -->
       <div class="item">
         <div class="card card-shadow border-0 mb-5">
-          <div class="card-body">
+          <div class="card-body card-body2">
             <div class="position-relative thumb bg-success-gradiant d-inline-block text-color mb-4"><img src="img/face5.jpg" alt="wrapkit" class="thumb-img position-absolute rounded-circle">6</div>
             <h5 class="font-weight-light">"Issue easily resolved and he was easy to communicate with. He walked me through the entire process and was patient, friendly, and overall pleasant to work with."</h5>
             <span class="devider d-inline-block my-3"></span>
@@ -430,7 +430,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/smooth-scroll.js"></script>
   <!--Animations on scroll-->
-  <script src="js/show-on-scroll.min.js"></script>
+  <script src="js/show-on-scroll.js"></script>
   <!--darkmode script-->
   <script src="js/dark-mode-switch.min.js"></script>
   <!--Autohide navbar-->
