updated git ignore added links

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="jumbotron hero_content">
         <div class="container">
           <h1 class="display-4 hello fade-in1">Hi, I'm Anthony</h1>
-          <p class="lead fade-in-delay intro">I am a Tech Support Specialist, Repair Technician, Fire Performer and Aspiring Web Developer</p>
+          <p class="lead fade-in-delay intro">I am a Full-Stack Web Developer, Tech Support Specialist, Repair Technician, and Fire Performer</p>
           <p class="lead fade-in-delay2 intro2">I solve technical problems and teach people skills to make their lives easier</p>
           <!-- <a class="btn btn-primary btn-lg p-2 mt-5 fade-in-delay3 learn-more" href="#about" role="button">Learn more</a> -->
           <div class="learn-more"> <a class="btn btn-primary btn-lg p-2 mt-5 fade-in-delay3" href="#about" role="button">Learn more</a></div>
@@ -384,12 +384,18 @@
               <!-- <form action="mail.php" method="POST"> No PHP on Github Pages-->
                   <div class="bg-dark">
                       <div class="mt-0">
-                        <div id="contact" class="text-center pt-5">
-                          <h1 class="display-4 slideinright show-on-scroll">Contact Me</h1>
+                        <h1 class="display-4 slideinright show-on-scroll mt-4">Contact Me</h1>
+                        <div id="contact" class="text-center">
                           <h4 class="fade-in show-on-scroll">Questions, Comments, Ideas?</h4>
                           <div>
-                            <a href="mailto:techx-guy@opayq.com?subject=Contact From Website&body=Dear Anthony,">
+                            <a href="mailto:techx-guy@opayq.com?subject=Contact From Website&body=Hi Anthony," target="_blank">
                           <button class="btn btn-primary btn-lg my-5 p-3"> Let's Connect!</button>
+                            </a>
+                            <a href="https://www.linkedin.com/in/anthony-gress/" target="_blank">
+                              <button class="btn btn-primary btn-lg my-5 p-3"> Linkedin</button>
+                            </a>
+                            <a href="https://github.com/techx-guy/" target="_blank">
+                              <button class="btn btn-primary btn-lg my-5 p-3"> GitHub</button>
                             </a>
                           </div>
                         </div>
