--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
       </div>
     </div>
   <!--About Me Section-->
-  <div>
+  <div class="container">
   <div class="row" id="about">
       <div class="col-lg-6">
         <img class="half-panel" src="img/demo_headshot.JPG" alt="headshot" loading="lazy" draggable="false">
       </div>
   
-    <div class="col-lg container">
+    <div class="col-lg">
       <div class="">
         <h2 class="display-4 slideinleft show-on-scroll" id="about-header">About Me</h2>
           <p class="content">I have always had a passion for technology. Throughout my life, I have been constantly tinkering with, building, and fixing electronics. I studied Computer Science at the University of Central Florida and have used those skills to solve problems and fix electronics for thousands of people. For the last year I have been providing tech support for 300 Verizon Wireless customers a month. Additionally, I resolved over 85% of their issues that I came into contact with. I obtained my A+ Certification from CompTIA in 2020 and I am continuously growing and furthering my education. As this is a rapidly evolving field, I strive to acquire the latest information pertaining to technology. I have studied network tools/infrastructure, web development, and cybersecurity. I actually built this website from the ground up using HTML, CSS, and Javascript. Check out my portfolio to see other projects that I have been working on lately!
