add digital business card page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="splashscreens/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <meta name="apple-mobile-web-app-title" content="Tech X Guy">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta property="og:site_name" content="Tech X Guy" />
@@ -77,6 +77,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./my-card.html">Digital Card</a>
               </li>
               <li class="nav-item">
                 <div class="custom-control custom-switch theme-switch-wrapper">
