--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./my-card.html">Digital Card</a>
+                <a class="nav-link" href="./digital-card.html">Digital Card</a>
               </li>
               <li class="nav-item">
                 <div class="custom-control custom-switch theme-switch-wrapper">
