--- a/digital-card.html
+++ b/digital-card.html
@@ -7,6 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 " viewport-fit=cover>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/card-style.css">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- Fav icon -->
+    <link rel="shortcut icon" href="img/favicon_io/apple-touch-icon-240x240.png" />
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png" /> -->
+    <link rel="apple-touch-icon" sizes="240x240" href="img/favicon_io/apple-touch-icon-240x240.png" />
+    <link rel="icon" type="image/png" sizes="240x240" href="img/favicon_io/apple-touch-icon-240x240.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-16x16.png" />
+    <link rel="manifest" href="img/favicon_io/site.webmanifest">
+    <link href="splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphoneplus_splash.png" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image">
+    <link href="splashscreens/iphonex_splash.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphonexr_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphonexsmax_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <meta name="apple-mobile-web-app-title" content="Tech X Guy">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta property="og:site_name" content="Tech X Guy" />
+    <meta property=“og:title” content="Solving problems and teaching people skills to make their lives easier" />
+    <meta property="og:type" content="website" />
+    <meta name="description" content="I solve technical problems and teach people skills to make their lives easier" />
+    <meta property="og:url" content="https://www.techxguy.com/digital-card" />
+    <meta property="og:image" content="img/og-image.png" />
+    <meta property="og:image:width" content="2200" />
+    <meta property="og:image:height" content="840" />
     <title>Digital Business Card</title>
   </head>
   <body ontouchstart="" class="bg-dark text-white">
