add PWA meta tags to digital card

--- a/digital-card.html
+++ b/digital-card.html
@@ -10,12 +10,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- Fav icon -->
     <link rel="shortcut icon" href="img/favicon_io/apple-touch-icon-240x240.png" />
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png" /> -->
     <link rel="apple-touch-icon" sizes="240x240" href="img/favicon_io/apple-touch-icon-240x240.png" />
     <link rel="icon" type="image/png" sizes="240x240" href="img/favicon_io/apple-touch-icon-240x240.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-16x16.png" />
-    <link rel="manifest" href="img/favicon_io/site.webmanifest">
+    <link rel="manifest" href="./img/favicon_io/site.webmanifest">
     <link href="splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="splashscreens/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
