fix url in qr code

--- a/digital-card.html
+++ b/digital-card.html
@@ -55,7 +55,7 @@
                 <a href="https://github.com/techx-guy/" class="btn btn-primary" target="_blank">GitHub</a>
                 <a href="mailto:?subject=Contact From Digital Business Card&body=Hi Anthony," class="btn btn-primary" target="_blank">Email</a>
                 <a href="https://www.techxguy.com/" class="btn btn-primary" target="_blank">Website</a>
-                <div class="mt-5"><img class="img-fluid" src="https://api.qrserver.com/v1/create-qr-code/?data=https://techxguy.com/digital-card/&amp;size=150x150" alt="website qr code"/></div>
+                <div class="mt-5"><img class="img-fluid" src="https://api.qrserver.com/v1/create-qr-code/?data=https://techxguy.com/digital-card&amp;size=150x150" alt="website qr code"/></div>
                 </div>
             </div>
             </div>
