fix navbar padding

--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
     -->
   </head>
   <body ontouchstart="">
-    <header></header>
     <div class="hero" id="home">
+    <header>
       <nav class="navbar navbar-expand-xl navbar-dark fixed-top navbar-blur" id="navbar">
-        <div class="container">
           <a class="navbar-brand" href="#home">
             <img src="img/penrose-outline-white.png" width="60" height="60" class="d-inline-block align-middle logo1" alt="logo">
             <span>Tech X Guy</span>
@@ -90,8 +89,8 @@
               <li class="blank-space"></li>
             </ul>
           </div>
-        </div>
       </nav>
+    </header>
       <div class="jumbotron hero_content">
         <div class="container">
           <h1 class="display-4 hello fade-in1">Hi, I'm Anthony</h1>
