--- a/digital-card.html
+++ b/digital-card.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/card-style.css">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <!-- Fav icon -->
     <link rel="shortcut icon" href="img/favicon_io/apple-touch-icon-240x240.png" />
     <link rel="apple-touch-icon" sizes="240x240" href="img/favicon_io/apple-touch-icon-240x240.png" />
     <link rel="icon" type="image/png" sizes="240x240" href="img/favicon_io/apple-touch-icon-240x240.png" />
@@ -45,7 +44,7 @@
     <div class="row">
       <div class="col-12">
       <div class="text-center mt-5"><h1 class="fw-bold">Tech X Guy</h1></div>
-        <div class="text-center mt-2"><h2>This is a custom generated digital business card</h2></div>
+        <div class="text-center mt-2"><h2>I am a Full Stack Web Developer<br><br>This is my custom built digital business card</h2></div>
             <div class="card mx-auto mt-5 pb-3 mb-4 bg-light">
               <img style="-webkit-user-drag: none;"src="https://images.unsplash.com/photo-1484589065579-248aad0d8b13?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2796&q=80" class="card-img-top card-image" alt="background abstract image">
               <div class="card-body">
