testing mobile touch

--- a/digital-card.html
+++ b/digital-card.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-  <html lang="en" ontouchmove>
+  <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,7 +38,7 @@
     <meta property="og:image:height" content="840" />
     <title>Digital Business Card</title>
   </head>
-  <body ontouchstart="" class="bg-dark text-white">
+  <body class="bg-dark text-white">
     <header class="jumbotron display-4 text-center pt-4">Hi, My Name is Anthony</header>
     <main class="container">
     <div class="row">
