--- a/digital-card.html
+++ b/digital-card.html
@@ -46,7 +46,7 @@
       <div class="text-center mt-5"><h1 class="fw-bold">Tech X Guy</h1></div>
         <div class="text-center mt-2"><h2>I am a Full Stack Web Developer<br><br>This is my custom built digital business card</h2></div>
             <div class="card mx-auto mt-5 pb-3 mb-4 bg-light">
-              <img style="-webkit-user-drag: none;"src="https://images.unsplash.com/photo-1484589065579-248aad0d8b13?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2796&q=80" class="card-img-top card-image" alt="background abstract image">
+              <img style="-webkit-user-drag: none;"src="./img/splash.jpeg" class="card-img-top card-image" alt="background abstract image">
               <div class="card-body">
                 <h5 class="card-title text-center text-dark pb-3 mt-1">Let's Connect!</h5>
                 <div class="card-text text-center">
