stop ios double tap zoom

--- a/digital-card.html
+++ b/digital-card.html
@@ -38,7 +38,7 @@
     <meta property="og:image:height" content="840" />
     <title>Digital Business Card</title>
   </head>
-  <body class="bg-dark text-white">
+  <body class="bg-dark text-white" onclick>
     <header class="jumbotron display-4 text-center pt-4">Hi, My Name is Anthony</header>
     <main class="container">
     <div class="row">
