updated virtual card

--- a/digital-card.html
+++ b/digital-card.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 " viewport-fit=cover>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./assets/css/card-style.css">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="shortcut icon" href="img/favicon_io/apple-touch-icon-240x240.png" />
@@ -25,10 +26,9 @@
     <link href="splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="splashscreens/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <meta name="apple-mobile-web-app-title" content="Tech X Guy">
+    <meta name="apple-mobile-web-app-title" content="Anthony's Business Card">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta property="og:site_name" content="Tech X Guy" />
+    <meta property="og:site_name" content="Anthony's Business Card" />
     <meta property=“og:title” content="Solving problems and teaching people skills to make their lives easier" />
     <meta property="og:type" content="website" />
     <meta name="description" content="I solve technical problems and teach people skills to make their lives easier" />
@@ -36,32 +36,40 @@
     <meta property="og:image" content="img/og-image.png" />
     <meta property="og:image:width" content="2200" />
     <meta property="og:image:height" content="840" />
-    <title>Digital Business Card</title>
+    <title>Anthony's Business Card</title>
   </head>
-  <body class="bg-dark text-white" onclick>
-    <header class="jumbotron display-4 text-center pt-4">Hi, My Name is Anthony</header>
+  <body onclick="" class="bg-dark text-white">
+    <header class="jumbotron display-4 text-center pt-4 hello">Hi, My Name is Anthony</header>
+    <div class="text-center mt-2 tag"><h2>I Am a Full Stack Web Developer</h2></div>
+    <div class="text-center"><h2>This Is My Virtual Business Card</h2></div>
     <main class="container">
     <div class="row">
       <div class="col-12">
-      <div class="text-center mt-5"><h1 class="fw-bold">Tech X Guy</h1></div>
-        <div class="text-center mt-2"><h2>I am a Full Stack Web Developer<br><br>This is my custom built digital business card</h2></div>
-            <div class="card mx-auto mt-5 pb-3 mb-4 bg-light">
-              <img style="-webkit-user-drag: none;"src="./img/splash.jpeg" class="card-img-top card-image" alt="background abstract image">
-              <div class="card-body">
+            <div class="card mx-auto mt-3 pb-3 mb-4 bg-light">
+              <img class="card-img-top card-image" style="-webkit-user-drag: none;"src="https://images.unsplash.com/photo-1484589065579-248aad0d8b13?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2796&q=80" alt="background abstract image">
+              <div class="card-body bg-light">
                 <h5 class="card-title text-center text-dark pb-3 mt-1">Let's Connect!</h5>
                 <div class="card-text text-center">
-                <a href="https://www.linkedin.com/in/anthony-gress/" class="btn btn-primary" target="_blank">LinkedIn</a>
-                <a href="https://github.com/techx-guy/" class="btn btn-primary" target="_blank">GitHub</a>
-                <a href="mailto:?subject=Contact From Digital Business Card&body=Hi Anthony," class="btn btn-primary" target="_blank">Email</a>
-                <a href="https://www.techxguy.com/" class="btn btn-primary" target="_blank">Website</a>
-                <div class="mt-5"><img class="img-fluid" src="https://api.qrserver.com/v1/create-qr-code/?data=https://techxguy.com/digital-card&amp;size=150x150" alt="website qr code"/></div>
+              
+                <div class="btn-wrapper">
+                  <div class="top-row">
+                    <a href="https://www.linkedin.com/in/anthony-gress/" class="btn btn-primary" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a>
+                    <a href="https://github.com/techx-guy/" class="btn btn-primary" target="_blank"><i class="bi bi-github"></i> GitHub</a>
+                  </div>
+                  <div class="share"><button class="btn shareBtn"><i class="bi bi-share-fill"></i></button></div>
+                  <div class="bottom-row">
+                    <a href="mailto:?subject=Contact From Digital Business Card&body=Hi Anthony," class="btn btn-primary" target="_blank"><i class="bi bi-envelope-fill"></i> Email</a>
+                    <a href="https://www.techxguy.com/" class="btn btn-primary" target="_blank"><i class="bi bi-globe2 shareIcon"></i> Website</a>
+                  </div>
+                </div>
+                <div class="mt-5"><img class="img-fluid qr-code" src="https://api.qrserver.com/v1/create-qr-code/?data=https://techxguy.com&amp;size=150x150" alt="website qr code"/></div>
                 </div>
             </div>
             </div>
           </div>
     </div>
     </main>
-    
+    <script src="../assets/js/card.js"></script>
   </body>
   </html>
   
