testing double tap zoom mobile fix

--- a/digital-card.html
+++ b/digital-card.html
@@ -38,7 +38,7 @@
     <meta property="og:image:height" content="840" />
     <title>Anthony's Business Card</title>
   </head>
-  <body class="bg-dark text-white">
+  <body onclick="" class="bg-dark text-white">
     <header class="jumbotron display-4 text-center pt-4 hello">Hi, My Name is Anthony</header>
     <div class="text-center mt-2 tag"><h2>I Am a Full Stack Web Developer</h2></div>
     <div class="text-center"><h2>This Is My Virtual Business Card</h2></div>
