--- a/digital-card.html
+++ b/digital-card.html
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="col-12">
             <div class="card mx-auto mt-3 pb-3 mb-4 bg-light">
-              <img class="card-img-top card-image" style="-webkit-user-drag: none;"src="https://images.unsplash.com/photo-1484589065579-248aad0d8b13?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2796&q=80" alt="background abstract image">
+              <img class="card-img-top card-image" style="-webkit-user-drag: none;"src="./img/splash.jpeg" alt="background abstract image">
               <div class="card-body bg-light">
                 <h5 class="card-title text-center text-dark pb-3 mt-1">Let's Connect!</h5>
                 <div class="card-text text-center">
