corrected url for qr code

--- a/digital-card.html
+++ b/digital-card.html
@@ -62,7 +62,7 @@
                     <a href="https://www.techxguy.com/" class="btn btn-primary" target="_blank"><i class="bi bi-globe2 shareIcon"></i> Website</a>
                   </div>
                 </div>
-                <div class="mt-5"><img class="img-fluid qr-code" src="https://api.qrserver.com/v1/create-qr-code/?data=https://techxguy.com&amp;size=150x150" alt="website qr code"/></div>
+                <div class="mt-5"><img class="img-fluid qr-code" src="https://api.qrserver.com/v1/create-qr-code/?data=https://techxguy.com/digital-card&amp;size=150x150" alt="website qr code"/></div>
                 </div>
             </div>
             </div>
