change share icon

--- a/digital-card.html
+++ b/digital-card.html
@@ -56,10 +56,10 @@
                     <a href="https://www.linkedin.com/in/anthony-gress/" class="btn btn-primary" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a>
                     <a href="https://github.com/techx-guy/" class="btn btn-primary" target="_blank"><i class="bi bi-github"></i> GitHub</a>
                   </div>
-                  <div class="share"><button class="btn shareBtn"><i class="bi bi-share-fill"></i></button></div>
+                  <div class="share"><button class="btn shareBtn"><i class="bi bi-box-arrow-up""></i></button></div>
                   <div class="bottom-row">
                     <a href="mailto:?subject=Contact From Digital Business Card&body=Hi Anthony," class="btn btn-primary" target="_blank"><i class="bi bi-envelope-fill"></i> Email</a>
-                    <a href="https://www.techxguy.com/" class="btn btn-primary" target="_blank"><i class="bi bi-globe2 shareIcon"></i> Website</a>
+                    <a href="https://www.techxguy.com/" class="btn btn-primary" target="_blank"><i class="bi bi-globe2"></i> Website</a>
                   </div>
                 </div>
                 <div class="mt-5"><img class="img-fluid qr-code" src="https://api.qrserver.com/v1/create-qr-code/?data=https://techxguy.com/digital-card&amp;size=150x150" alt="website qr code"/></div>
