--- a/digital-card.html
+++ b/digital-card.html
@@ -56,7 +56,7 @@
                     <a href="https://www.linkedin.com/in/anthony-gress/" class="btn btn-primary" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a>
                     <a href="https://github.com/techx-guy/" class="btn btn-primary" target="_blank"><i class="bi bi-github"></i> GitHub</a>
                   </div>
-                  <div class="share"><button class="btn shareBtn"><i class="bi bi-box-arrow-up""></i></button></div>
+                  <div class="share"><button class="btn shareBtn"><i class="bi bi-box-arrow-up"></i></button></div>
                   <div class="bottom-row">
                     <a href="mailto:?subject=Contact From Digital Business Card&body=Hi Anthony," class="btn btn-primary" target="_blank"><i class="bi bi-envelope-fill"></i> Email</a>
                     <a href="https://www.techxguy.com/" class="btn btn-primary" target="_blank"><i class="bi bi-globe2"></i> Website</a>
